--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -435,14 +435,14 @@
             <div class="modal-body">
                 <p>
                     Upon submitting the resource for publication it will be permanently published and assigned a
-                    digital object identifier (DOI). This is <strong>final</strong> and changes can only be made
+                    minimal identifier (MINID). This is <strong>final</strong> and changes can only be made
                     on a new version (copy) of the resource.
                 </p>
                 <p>
                      Please confirm that you accept the CommonsShare Publication Agreement shown below.
                 </p>
                 <div class="iframe-border">
-                    <iframe id="pub-agreement-frame" scrolling="no" src="https://www.hydroshare.org/publication-agreement/"></iframe>
+                    <iframe id="pub-agreement-frame" scrolling="no" src="https://www.commonsshare.org/publication-agreement/"></iframe>
                 </div>
                 <input type="checkbox" id="agree-chk"><label for="agree-chk" class="checkbox-label">I accept the CommonsShare Publication Agreement.</label>
             </div>
