--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -4,8 +4,7 @@
         <div class="alert {% if just_created %}alert-success{% else %}alert-warning{% endif %} alert-dismissible" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <strong>Congratulations! </strong>
-            <span>Your resource has been published. You will see the DOI in the citation for your resource below,
-                but it may take approximately one day for your DOI to become active.</span>
+            <span>Your resource has been published. You will see the MINID in the citation for your resource below.</span>
         </div>
     </div>
 {% endif %}
