--- a/hs_tools_resource/templates/pages/toolresource.html
+++ b/hs_tools_resource/templates/pages/toolresource.html
@@ -31,10 +31,20 @@
                 </div>
                 <div>
                     {% if supported_res_types %}
-                        <h4><strong>Supported Resource Types:</strong></h4>
+                        <h4><strong>Supported boo Resource Types:</strong></h4>
                         <hr class="tool-metadata-hr">
                         <div class="row">
                             <div class="col-sm-8">{{ supported_res_types }}</div>
+                        </div>
+                        <hr style="border:0">
+                    {% endif %}
+                </div>
+                <div>
+                    {% if supported_agg_types %}
+                        <h4><strong>Supported Aggregation Types:</strong></h4>
+                        <hr class="tool-metadata-hr">
+                        <div class="row">
+                            <div class="col-sm-8">{{ supported_agg_types }}</div>
                         </div>
                         <hr style="border:0">
                     {% endif %}
