--- a/theme/templates/resource-landing-page/coverage.html
+++ b/theme/templates/resource-landing-page/coverage.html
@@ -129,6 +129,16 @@
                         {% csrf_token %}
                         <div class="col-sm-12">
                             <h3>Coverage</h3>
+                            {% if cm.resource_type == 'CompositeResource' %}
+                                <div id="readonly-coverage-notice" class="alert alert-warning alert-dismissible">
+                                    <label>Fill in the spatial and/or temporal coverage that bound the entirety of the data inside your resource.
+                                        This will display on the map at right. If your resource is public, this will display on the Discover
+                                        map for others to find. You can set the spatial and temporal coverage manually by filling in the inputs
+                                        below or you can add content files to your resource that have spatial coverage information (e.g., geographic
+                                        feature, geographic raster, multidimensional, etc.) and then click the button to set the coverage from
+                                        the content files.</label>
+                                </div>
+                            {% endif %}
                             <div id="readonly-coverage-notice" class="alert alert-warning alert-dismissible"
                                  style="display: none;">
                                 <label>Spatial coverage for time series resources should be set by editing the
