--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -184,7 +184,7 @@
                     {% if relevant_tools %}
                         {% for tool in relevant_tools.tool_list %}
                             {% if tool.agg_types or tool.file_extensions and tool.openwithlist %}
-                                <li class="btn-open-with" data-menu-name="web-app" url="{% url 'tracking-applaunch' %}?url={{tool.url|urlencode}};name={{tool.title}}" agg-types="{{ tool.agg_types }}" file-extensions="{{ tool.file_extensions }}">
+                                <li class="btn-open-with" data-menu-name="web-app" agg-types="{{ tool.agg_types }}" file-extensions="{{ tool.file_extensions }}" url_aggregation="{% url 'tracking-applaunch' %}?url={{tool.url_aggregation|urlencode}};name={{tool.title}}" url_file="{% url 'tracking-applaunch' %}?url={{tool.url_file|urlencode}};name={{tool.title}}" agg-types="{{ tool.agg_types }}" file-extensions="{{ tool.file_extensions }}">
                                     <img class="file-options-webapp-icon" src="{{ tool.icon_url }}">
                                      {% if tool.title|length > 20 %}
                                         <span>{{ tool.title|slice:":21"|add:"..." }}</span>
