--- a/hs_tools_resource/templates/pages/toolresource.html
+++ b/hs_tools_resource/templates/pages/toolresource.html
@@ -21,10 +21,30 @@
                 </div>
                 <div>
                     {% if url_base %}
-                        <h4><strong>App-launching URL Pattern: <a href='/terms#AppURLPattern' target='_blank'><font size='3'>Help</font></a></strong></h4>
+                        <h4><strong>App-launching Resource Level URL Pattern: <a href='/terms#AppURLPattern' target='_blank'><font size='3'>Help</font></a></strong></h4>
                         <hr class="tool-metadata-hr">
                         <div class="row">
                             <div class="col-sm-8">{{ url_base.value }}</div>
+                        </div>
+                        <hr style="border:0">
+                    {%  endif %}
+                </div>
+                <div>
+                    {% if url_base_aggregation %}
+                        <h4><strong>App-launching Aggregation Level URL Pattern: <a href='/terms#AppURLPattern' target='_blank'><font size='3'>Help</font></a></strong></h4>
+                        <hr class="tool-metadata-hr">
+                        <div class="row">
+                            <div class="col-sm-8">{{ url_base_aggregation.value }}</div>
+                        </div>
+                        <hr style="border:0">
+                    {%  endif %}
+                </div>
+                <div>
+                    {% if url_base_file %}
+                        <h4><strong>App-launching File Level URL Pattern: <a href='/terms#AppURLPattern' target='_blank'><font size='3'>Help</font></a></strong></h4>
+                        <hr class="tool-metadata-hr">
+                        <div class="row">
+                            <div class="col-sm-8">{{ url_base_file.value }}</div>
                         </div>
                         <hr style="border:0">
                     {%  endif %}
