--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -154,13 +154,13 @@
             <a class='btn btn-primary' href="{{ tool_homepage_url }}" target="_blank">Open Web App</a>
         {% endif %}
 
-        {% if relevant_tools and relevant_tools.open_with_app_counter > 0 %}
+        {% if relevant_tools and relevant_tools.resource_level_app_counter > 0 %}
             <span id="apps-dropdown"/>
             <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Open with...
                 <span class="caret"></span></button>
             <ul class="dropdown-menu">
                 {% for tool in relevant_tools.tool_list %}
-                    {% if tool.openwithlist and not tool.agg_types  %}
+                    {% if tool.openwithlist and tool.url %}
                         <li title="{{ tool.title }}">
                                 <a href="{% url 'tracking-applaunch' %}?url={{tool.url|urlencode}};name={{ tool.title }};tool_res_id={{tool.res_id}};res_id={{ cm.short_id }}" target="_blank">
                                 <img class="dropdown-user-webapp-icon" src="{{ tool.icon_url }}">
