Code review feedback 1

--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -139,7 +139,7 @@
                         <div class="step-number">4</div>
                         <h4>Share with colleagues</h4>
                         <div class="description-container table-display">
-                            <span class="step-description table-cell-display">You choose who has access to the data and models you have uploaded to HydroShare. You can share with individual users or publish your resources for everyone to access.</span>
+                            <span class="step-description table-cell-display">Choose who has access to the data and models you have uploaded to HydroShare. You can share with individual users or publish your resources for everyone to access.</span>
                         </div>
                         <div>
                             <img class="img-responsive img-step" src="{{ STATIC_URL }}img/home-page/step4.png"
@@ -158,7 +158,7 @@
                         </div>
                         <div>
                             <img class="img-responsive img-step" src="{{ STATIC_URL }}img/home-page/step1.png"
-                                 alt="Create data">
+                                 alt="Formally Publish">
                         </div>
                     </div>
                 </div>
