--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -27,7 +27,6 @@ h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
 
 .navbar-brand {
     padding: 0;
-    padding-top: 10px;
 }
 
 #img-brand-logo {
@@ -39,6 +38,9 @@ h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
     padding-right: 15px;
 }
 
+.container>.navbar-collapse {
+    padding-top: 11px;
+}
 .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
     border-color: #DDD;
 }
@@ -46,6 +48,7 @@ h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
 .navbar-toggle {
     background: #B5B5B5;
     border-color: #8C8C8C !important;
+    margin-top: 15px;
 }
 
 .navbar-inverse {
