--- a/theme/templates/resource-landing-page/coverage.html
+++ b/theme/templates/resource-landing-page/coverage.html
@@ -131,10 +131,7 @@
                             <h3>Coverage</h3>
                             {% if cm.resource_type == 'CompositeResource' %}
                                 <div id="readonly-coverage-notice" class="alert alert-warning alert-dismissible">
-                                    <label>Fill in the spatial and/or temporal coverage that bound the entirety of the data inside your resource.
-                                        This will display on the map at right. If your resource is public, this will display on the Discover
-                                        map for others to find. You can set the spatial and temporal coverage manually by filling in the inputs
-                                        below or you can add content files to your resource that have spatial coverage information (e.g., geographic
+                                    <label>You can set the spatial and temporal coverage manually by using the map to place a point or box or by filling in coordinates. Alternatively, you can add content files to your resource that have spatial coverage information (e.g., geographic
                                         feature, geographic raster, multidimensional, etc.) and then click the button to set the coverage from
                                         the content files.</label>
                                 </div>
