[#2567] add main file type

--- a/hs_core/templates/pages/metadata_terms.html
+++ b/hs_core/templates/pages/metadata_terms.html
@@ -1485,6 +1485,7 @@
                 <li>Keys only available within App-launching Aggregation Level URL Pattern</li>
                 <ul>
                     <li> <strong>${HS_AGG_PATH}</strong>: Path of an aggregation in HydroShare</li>
+                    <li> <strong>${HS_MAIN_FILE}</strong>: The main file name of an aggregation</li>
                 </ul>
             </ul>
                 An example:<br>
