--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -1153,7 +1153,7 @@
                                                              <img class="app-approved-icon-img" src="/static/img/approved_app.png">
                                                          </a>
                                                      {% endif %}
-                                                    <a href="/resource/{{ tool.res_id }}/" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Open resource with this WebApp">
+                                                    <a href="/resource/{{ tool.res_id }}/" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Open this WebApp resource">
                                                         {% if tool.title|length > 20 %}
                                                             <h4>{{ tool.title|slice:":21"|add:"..." }}</h4>
                                                         {% else %}
