More home page improvements

--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -91,7 +91,7 @@
         <h2 class="home-page-block-title">How it works</h2>
         <div class="row home-page-block">
             <div class="steps-container">
-                <div class="col-xs-12 col-md-2 col-md-offset-1 step-wrapper slideInBlock">
+                <div class="col-xs-12 col-md-4 col-lg-2 col-lg-offset-1 step-wrapper slideInBlock">
                     <div class="step-item">
                         <div class="step-number">1</div>
                         <h4>Create data</h4>
@@ -105,7 +105,7 @@
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-md-2 step-wrapper slideInBlock">
+                <div class="col-xs-12 col-md-4 col-lg-2 step-wrapper slideInBlock">
                     <div class="step-item">
                         <div class="step-number">2</div>
                         <h4>Upload to HydroShare</h4>
@@ -120,7 +120,7 @@
 
                 </div>
 
-                <div class="col-xs-12 col-md-2 step-wrapper slideInBlock">
+                <div class="col-xs-12 col-md-4 col-lg-2 step-wrapper slideInBlock">
                     <div class="step-item">
                         <div class="step-number">3</div>
                         <h4>Describe with metadata</h4>
@@ -134,7 +134,7 @@
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-md-2 step-wrapper slideInBlock">
+                <div class="col-xs-12 col-md-6 col-lg-2 step-wrapper slideInBlock">
                     <div class="step-item">
                         <div class="step-number">4</div>
                         <h4>Share with colleagues</h4>
@@ -148,7 +148,7 @@
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-md-2 step-wrapper slideInBlock">
+                <div class="col-xs-12 col-md-6 col-lg-2 step-wrapper slideInBlock">
                     <div class="step-item">
                         <div class="step-number">5</div>
                         <h4>Formally Publish</h4>
@@ -157,7 +157,7 @@
                             Reference related journal publications in your metadata.</span>
                         </div>
                         <div>
-                            <img class="img-responsive img-step" src="{{ STATIC_URL }}img/home-page/step1.png"
+                            <img class="img-responsive img-step" src="{{ STATIC_URL }}img/home-page/step5.png"
                                  alt="Formally Publish">
                         </div>
                     </div>
