--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load pages_tags mezzanine_tags keyword_tags comment_tags hydroshare_tags %}
-{% block title %}Discovery{% endblock %}
+{% block meta_title %}Discovery{% endblock %}
 {% block main %}
     <input type="hidden" id="static-url" value="{{ STATIC_URL }}">
 <div class="container" id="discover-main">
