enable urls in right statements when no given licence option is chosen.

--- a/theme/templates/resource-landing-page/citation.html
+++ b/theme/templates/resource-landing-page/citation.html
@@ -36,10 +36,10 @@
                         {% if rights.statement %}
                             {% if rights.statement|length > 1000 %}
                                 <div class="pre-scrollable">
-                                    <span>{{ rights.statement|linebreaks }}</span>
+                                    <span>{{ rights.statement|linebreaks|urlize }}</span>
                                 </div>
                             {% else %}
-                                <span>{{ rights.statement|linebreaks }}</span>
+                                <span>{{ rights.statement|linebreaks|urlize }}</span>
                             {% endif %}
                         {% endif %}
 
