Final verbiage updates

--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -139,7 +139,7 @@
                         <div class="step-number">4</div>
                         <h4>Share with colleagues</h4>
                         <div class="description-container table-display">
-                            <span class="step-description table-cell-display">Choose who has access to the data and models you have uploaded to HydroShare. You can share with individual users or publish your resources for everyone to access.</span>
+                            <span class="step-description table-cell-display">Choose who has access to the data and models you have uploaded to HydroShare. You can share with individual users or make your resources public for everyone to access.</span>
                         </div>
                         <div>
                             <img class="img-responsive img-step" src="{{ STATIC_URL }}img/home-page/step4.png"
@@ -153,8 +153,8 @@
                         <div class="step-number">5</div>
                         <h4>Formally Publish</h4>
                         <div class="description-container table-display">
-                            <span class="step-description table-cell-display">Obtain a Digital Object Identifier so your data can be easily cited.
-                            Reference related journal publications in your metadata.</span>
+                            <span class="step-description table-cell-display">Obtain a Digital Object Identifier (DOI) so your work can be
+                            easily cited. Reference related journal publications in your metadata.</span>
                         </div>
                         <div>
                             <img class="img-responsive img-step" src="{{ STATIC_URL }}img/home-page/step5.png"
