--- a/hs_explore/templates/recommendations.html
+++ b/hs_explore/templates/recommendations.html
@@ -6,21 +6,19 @@
     <h2>Recommended resources</h2>
     <ul>
         {% for r in resource_list %}
-            <li><a href="{{ r.candidate_resource.url }}">{{ r.candidate_resource.title }}</a> (relevance {{ r.relevance }})</li>
+            <li><a href="/resource/{{ r.candidate_resource.short_id }}/">{{ r.candidate_resource.title }}</a> (relevance {{ r.relevance }})</li>
         {% endfor %}
     </ul>
     <h2>Recommended users</h2>
     <ul>
         {% for r in user_list %}
-            <li>{{ r.candidate_user.username }} (relevance {{ r.relevance }})</li>
+            <li><a href="/user/{{ r.candidate_user.id }}/">{{ r.candidate_user.username }}</a> (relevance {{ r.relevance }})</li>
         {% endfor %}
     </ul>
     <h2>Recommended groups</h2>
     <ul>
         {% for r in group_list %}
-            <li>{{ r.candidate_group.name }} (relevance {{ r.relevance }})</li>
+            <li><a href="/group/{{ r.candidate_group.id }}/">{{ r.candidate_group.name }}</a> (relevance {{ r.relevance }})</li>
         {% endfor %}
     </ul>
 {% endblock %}
-
-
