Adding/Editing/Deleting an author returns to authorship. Previously it went back to the beginning of the resource landing page.

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -593,7 +593,7 @@
                             {% else %}
                                <li class="col-xs-2 col-md-2">
                             {%  endif %}
-                                <a href="#contactTab" data-toggle="tab" title="Contact">
+                                <a id="creator" href="#contactTab" data-toggle="tab" title="Contact">
                                     <span class="glyphicon glyphicon-user"> </span>
                                     &nbspAuthorship
                                 </a>
