[#2808] adding menu option for creating fileset aggregation

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -156,6 +156,10 @@
                             <span class="glyphicon glyphicon-check icon-blue"></span>
                             <span>Add metadata to file</span>
                         </li>
+                        <li id="btn-set-fileset-file-type" data-menu-name="setfilesetfiletype" data-toggle="tooltip" title="Add metadata to a folder">
+                            <span class="glyphicon glyphicon-check icon-blue"></span>
+                            <span>Add metadata to folder</span>
+                        </li>
                         <li id="btn-set-geo-file-type" data-menu-name="setgeorasterfiletype" data-toggle="tooltip" title="Convert GeoTiff files to a geographic raster dataset to which you can add metadata">
                             <span class="glyphicon glyphicon-check icon-blue"></span>
                             <span>Convert to Geographic Raster</span>
