--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -151,7 +151,7 @@
                 <div class="col-xs-12 col-md-6 col-lg-2 step-wrapper slideInBlock">
                     <div class="step-item">
                         <div class="step-number">5</div>
-                        <h4>Formally Publish</h4>
+                        <h4>Permanently Publish</h4>
                         <div class="description-container table-display">
                             <span class="step-description table-cell-display">Obtain a Digital Object Identifier (DOI) so your work can be
                             easily cited. Reference related journal publications in your metadata.</span>
