--- a/hs_explore/templates/recommendations.html
+++ b/hs_explore/templates/recommendations.html
@@ -4,45 +4,76 @@
 {% block title %}Explore{% endblock %}
 {% block main %}
     <h2>Recommended resources</h2>
-    <ul>
-        {% for r in resource_list %}
-            <li><a href="/resource/{{ r.candidate_resource.short_id }}/">{{ r.candidate_resource.title }}</a> (relevance {{ r.relevance }})</li>
-            {% if r.keywords %} 
-                due to keywords found in your resources, including: 
-                <ul> 
-                    {% for z in r.keywords.all %} 
-                        <li> {{ z.key }}: {{ z.value }} </li> 
-                    {% endfor %}
-                </ul> 
-            {% endif %}
-        {% endfor %}
+    <ul id='rec-res'>
+        {% include "recommended_resources.html" %}
     </ul>
     <h2>Recommended users</h2>
-    <ul>
-        {% for r in user_list %}
-            <li><a href="/user/{{ r.candidate_user.id }}/">{{ r.candidate_user.username }}</a> (relevance {{ r.relevance }})</li>
-            {% if r.keywords %} 
-                due to keywords found in your resources, including: 
-                <ul> 
-                    {% for z in r.keywords.all %} 
-                        <li> {{ z.key }}: {{ z.value }} </li> 
-                    {% endfor %}
-                </ul> 
-            {% endif %}
-        {% endfor %}
+    <ul id='rec-user'>
+        {% include "recommended_users.html"  %}
     </ul>
-    <h2>Recommended groups</h2>
-    <ul>
-        {% for r in group_list %}
-            <li><a href="/group/{{ r.candidate_group.id }}/">{{ r.candidate_group.name }}</a> (relevance {{ r.relevance }})</li>
-            {% if r.keywords %} 
-                due to keywords found in your resources, including: 
-                <ul> 
-                    {% for z in r.keywords.all %} 
-                        <li> {{ z.key }}: {{ z.value }} </li> 
-                    {% endfor %}
-                </ul> 
-            {% endif %}
-        {% endfor %}
-    </ul>
+{% endblock %}
+{% block extra_js %}
+    <script>
+        var update_recommended = function(part, key, value) {
+            console.log(part + ":" + key + ":" + value);
+            startTime = new Date();
+            if (part == 'resources') {
+                $('#rec-res').empty();
+            } else {
+                $('#rec-user').empty();    
+            }
+            $.ajax({
+                url: '/update_explore/',
+                type: 'GET',
+                data: {
+                    recommended_part: part,
+                    genre_key: key,
+                    genre_value: value
+                },
+                success: function(data) {
+                    if (part == 'resources') {
+                        $('#rec-res').html(data);
+                    } else {
+                        $('#rec-user').html(data);
+                    }
+                    endTime = new Date();
+                    var timeDiff = Math.round(endTime - startTime)/1000;
+                    console.log(timeDiff + " seconds");
+                },
+                failure: function(data) { 
+                    console.log('Got an error dude');
+                }
+            });
+        }
+        /*
+        $(document).ready(function () {            
+            $(".dismiss-button").click(function (e) {
+                e.preventDefault();
+                var arr = $(this).val().split(",");
+                var key = arr[0];
+                var value = arr[1];
+                console.log(key + ":" + value);
+                startTime = new Date();
+                $('#rec-res').empty();
+                $.ajax({
+                    url: '/update_explore/',
+                    type: 'GET',
+                    data: {
+                        genre_key: key,
+                        genre_value: value
+                    },
+                    success: function(data) {
+                        $('#rec-res').html(data);
+                         endTime = new Date();
+                         var timeDiff = Math.round(endTime - startTime)/1000;
+                         console.log(timeDiff + " seconds");
+                    },
+                    failure: function(data) { 
+                        console.log('Got an error dude');
+                    }
+                }); 
+
+            });
+        });*/
+    </script>
 {% endblock %}
